# synclib_flutter

./: .metadata  README.md  pubspec.yaml  synclib.h
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/synclib_flutter/: SynclibFlutterPlugin.kt
android/src/test/kotlin/com/example/synclib_flutter/: SynclibFlutterPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
ios/: synclib_flutter.podspec
ios/Classes/: SynclibFlutterPlugin.swift
lib/: synclib_flutter.dart  synclib_flutter_method_channel.dart  synclib_flutter_platform_interface.dart  synclib_flutter_web.dart
lib/src/: merkle.dart  synclib_bindings.dart  synclib_drift_web.dart  synclib_hash_stub.dart  synclib_hash_web.dart  synclib_impl.dart  synclib_impl_stub.dart  synclib_platform_interface.dart  synclib_web.dart
lib/src/drift/: synclib_drift_database.dart  synclib_drift_database.g.dart
lib/src/web/: synclib.js  (+2 more)
lib/wasm/: synclib_hash.wasm
macos/: synclib_flutter.podspec
macos/Classes/: SynclibFlutterPlugin.swift
macos/Libraries/: libsynclib.dylib
scripts/: build_native.sh
test/: merkle_test.dart  synclib_flutter_method_channel_test.dart  synclib_flutter_test.dart
web/: synclib_hash.js
(+2 files in other folders)
